* PathMatchingResourcePatternResolver can retrieve multiple class path resources with the same name

Package org.springframework.dao
* fixed DataAccessUtils' "requiredUniqueResult" method, to correctly throw an IncorrectResultSizeDataAccessException

Package org.springframework.jdbc
* DataSourceUtils' "closeConnectionIfNecessary" logs error on SQLException rather than rethrowing an exception
* removed CannotCloseJdbcConnectionException, as it is not used anymore
* DataSourceTransactionManager closes JDBC Connection if "doBegin" fails
* DataSourceTransactionManager manages nested transactions via JDBC 3.0 Savepoints
* DataSourceTransactionObject implements SavepointManager to allow for savepoint management via TransactionStatus
* refactored Prepared/CallableStatement.setXxx method invocations into JdbcUtils.setParameters utility method
* added SqlTypeValue interface with callback method "setTypeValue" that will handle all database-specific code
* added AbstractSqlTypeValue implementation with callback method "createTypeValue", avoiding statement handling
* added SqlLobValue implementation of SqlTypeValue, for holding BLOB/CLOB parameter values
* added support for BLOB/CLOB parameter values via SqlLobValue to JdbcTemplate, SqlUpdate and StoredProcedure
* JdbcTemplate always passes SQL string to SQLExceptionTranslator, even for static queries and updates
* moved "resultSetType" and "updatableResults" properties from SqlOperation up to RdbmsOperation
* added BatchSqlUpdate class to jdbc.object package, for convenient execution of batch updates
* adapted CommonsDbcpNativeJdbcExtractor for Commons DBCP 1.2, to support both DBCP 1.1 and 1.2
* rewrote JBossNativeJdbcExtractor with reflection, to also support ResultSet unwrapping for JBoss 3.2.4
* added WebSphereNativeJdbcExtractor, using WSJdbcUtil's "getNativeConnection" method (tested with WLS 5.1.0)

Package org.springframework.mail