@@ -45,6 +45,7 @@ Package org.springframework.dao
 * fixed DataAccessUtils' "requiredUniqueResult" method, to correctly throw an IncorrectResultSizeDataAccessException
 
 Package org.springframework.jdbc
+* added feature to allow for defining custom translations using CustomSQLErrorCodesTranslation defined in the sql-error-codes.xml
 * DataSourceUtils' "closeConnectionIfNecessary" logs error on SQLException rather than rethrowing an exception
 * removed CannotCloseJdbcConnectionException, as it is not used anymore
 * DataSourceTransactionManager closes JDBC Connection if "doBegin" fails
